<resources>
    <string name="app_name">National Public School</string>
    <string name="app_name_full">National Public School
    </string>
    <string name="channel_name">NSP Indore Notifications</string>
    <string name="channel_description">Showing various notifications related to NSP Indore</string>


    <string name="retry">Retry</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="MSG_INTERNETERROR">No network connection, please try again later.</string>
    <string name="msgTitle">Message</string>
    <string name="new_version">New Version </string>
    <string name="new_version_available">A new version available for update, Please update the app to continue.</string>

    <string name="tutorial_header1">Dummy Text1</string>
    <string name="tutorial_header2">Dummy Text2</string>
    <string name="tutorial_header3">Dummy Text3</string>
    <string name="tutorial_header4">Dummy Text4</string>
    <string name="tutorial_message1">Dummy Message for Hiring Alerts introduction </string>
    <string name="tutorial_message2">Dummy Message for Hiring Alerts introduction </string>
    <string name="tutorial_message3">Dummy Message for Hiring Alerts introduction </string>
    <string name="tutorial_message4">Dummy Message for Hiring Alerts introduction </string>

    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="reset_link">Request Reset Link</string>
    <string name="register_with_us">Register with us</string>
    <string name="signup">Signup</string>
    <string name="err_msg_name">Please Enter Full Name</string>
    <string name="err_msg_email">Please Enter valid email address</string>
    <string name="err_msg_password">Please Enter password</string>

    <string name="phone_require">Please enter your 10 digit mobile number</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_star">Full Name*</string>
    <string name="email_id_star">Email ID*</string>
    <string name="password_star">Password*</string>
    <string name="confirm_password_star">Confirm Password*</string>
    <string name="mobile_number_star">Mobile Number*</string>
    <string name="enter_verification_code">Enter Verification Code</string>

    <string name="enter_code_sent">Enter code sent on your phone inorder to process your verification.</string>

    <string name="verify">Verify</string>
    <string name="terms">By Clicking Sign Up</string>
    <string name="terms1">I agree to HiringAlerts</string>
    <string name="terms2"><u>Terms of Service</u></string>

    <string name="thankyou">Thank You!</string>
    <string name="reset_thankyou_msg">A password reset link hase been sent to your registered email address.</string>
    <string name="back_to">Back to</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>

    <string name="parent_login">PARENT LOGIN</string>
    <string name="teacher_login">TEACHER LOGIN</string>
    <string name="parent">PARENT</string>
    <string name="teacher">TEACHER</string>
    <string name="login_message">Please enter your mobile number below to get access to our app</string>



    <string name="class_home_work">Class \nHome Work</string>
    <string name="class_attendance">Class \nAttendance</string>
    <string name="notification">Latest \n Notification</string>
    <string name="timetable">Class \nTime Table</string>
    <string name="school_fee">School \nFees</string>
    <string name="bus_route">Track \n Bus Route</string>
    <string name="calendar">School \nCalendar</string>


    <string name="add_class_home_work">Assign \nHome Work</string>
    <string name="add_class_attendance">Mark \nAttendance</string>
    <string name="add_notification">Send \n Announcements</string>


    <string-array name="nav_menu">
        <item>@string/nav_home</item>
      <!--  <item>@string/nav_about</item>
        <item>@string/nav_help</item>-->
        <item>@string/nav_logout</item>

    </string-array>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="profile_teacher">Profile Teacher</string>
    <string name="profile_parent">Profile Parent</string>

    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="sure_logout">Are you sure want to logout from app?</string>

    <string name="no_announcement">Currently No Announcement for you!!!</string>
    <string name="no_homework">Currently No Homework for you!!!</string>
    <string name="announcement_header">Announcement</string>
    <string name="home_work_header">HomeWork</string>


    <string name="create_announcement_header">Create Announcement</string>
    <string name="create_announcement_message">Just write a message or add a image and send to all parents of your class students</string>
    <string name="enter_title_hint">Enter title here...</string>
    <string name="enter_message_hint">Enter message here...</string>
    <string name="submit">Send</string>
    <string name="submit_label">Submit</string>
    <string name="select_message_type">Select Message type Text/Image</string>
    <string name="image_require">Please select image</string>
    <string name="title_require">Please enter title</string>
    <string name="text_require">Please enter message</string>
    <string name="homework_require">Please enter Homework</string>
    <string name="existing_picture">Select from Gallery</string>
    <string name="take_picture">Open Camera</string>
    <string name="no_student">No student in your class</string>
    <string name="select_students">Select Students</string>
    <string name="done">Done</string>
    <string name="student_require">Please select at least one student</string>
    <string name="created_by">Created by: </string>
    <string name="your_attendance">Your Attendance</string>
    <string name="absents">Absents</string>

    <string name="permission_rationale_location">Access to the location service is required to  shows your current location on the map.</string>
    <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

</resources>
