<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/ic_app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header_ll"
        layout="@layout/header_toolbar"/>

    <ScrollView
        android:layout_below="@+id/header_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:background="@drawable/input_bg"
            android:layout_margin="@dimen/dimen20"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_tv"
                android:textSize="@dimen/text14"
                android:textColor="#A9A9A9"
                android:padding="@dimen/dimen20"
                android:text="@string/create_announcement_message"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_below="@+id/title_tv"
                android:textSize="@dimen/text14"
                android:textColor="@color/black"
                android:padding="@dimen/dimen20"
                android:text="@string/select_message_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/text_rb"
                android:layout_below="@+id/type_tv"
                android:text="Text"
                android:layout_marginLeft="@dimen/dimen20"
                android:padding="@dimen/dimen10"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/image_rb"
                android:layout_toRightOf="@+id/text_rb"
                android:layout_below="@+id/type_tv"
                android:text="Image"
                android:layout_marginLeft="@dimen/dimen20"
                android:padding="@dimen/dimen10"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/title_et"
                android:background="@drawable/input_bg"
                android:layout_below="@+id/text_rb"
                android:textSize="@dimen/text14"
                android:textColor="@color/black"
                android:textColorHint="#A9A9A9"
                android:minLines="1"
                android:maxLines="1"
                android:maxLength="25"
                android:singleLine="true"
                android:hint="@string/enter_title_hint"
                android:imeOptions="actionNext"
                android:layout_margin="@dimen/dimen20"
                android:padding="@dimen/dimen20"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/message_et"
                android:background="@drawable/input_bg"
                android:layout_below="@+id/title_et"
                android:textSize="@dimen/text14"
                android:textColor="@color/black"
                android:textColorHint="#A9A9A9"
                android:minLines="5"
                android:maxLines="5"
                android:maxLength="1000"
                android:visibility="visible"
                android:singleLine="false"
                android:scrollbars="none"
                android:gravity="top|left"
                android:hint="@string/enter_message_hint"
                android:imeOptions="actionDone"
                android:layout_margin="@dimen/dimen20"
                android:padding="@dimen/dimen20"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/image_container_rl"
                android:layout_below="@+id/message_et"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen20"
                android:layout_marginRight="@dimen/dimen20"
                android:layout_marginBottom="@dimen/dimen20"
                android:background="@drawable/input_bg"
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <TextView
                    android:id="@+id/choose_image_tv"
                    android:layout_centerInParent="true"
                    android:text="Select image"
                    android:textColor="#A9A9A9"
                    android:textSize="@dimen/text16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/image_iv"
                    android:layout_centerInParent="true"
                    android:scaleType="centerInside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/student_rl"
                android:layout_marginLeft="@dimen/dimen20"
                android:layout_marginRight="@dimen/dimen20"
                android:layout_marginTop="@dimen/dimen20"
                android:background="@drawable/input_bg"
                android:layout_below="@+id/image_container_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/student_tv"
                    android:padding="@dimen/dimen10"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:text="@string/select_students"
                    android:textSize="@dimen/text14"
                    android:drawableRight="@drawable/right_arrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <Button
                android:id="@+id/submit_btn"
                android:textSize="@dimen/text16"
                android:layout_below="@+id/student_rl"
                android:layout_margin="@dimen/dimen20"
                android:textColor="@color/White"
                android:text="@string/submit"
                android:gravity="center"
                android:background="@drawable/square_button_bg"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <View
                android:layout_below="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen50"/>
        </RelativeLayout>

    </ScrollView>

    <include
        layout="@layout/progress_dialog_loader"/>

</RelativeLayout>